# PaperBoat

./: license.txt
ecl-pb/: karnagio
ecl-pb/0.1/: karnagio
ecl-pb/0.1/ecl-pb-glue/: macros.h  workspace.h
ecl-pb/0.1/pb/: types.ecl  undefinitions.ecl
ecl-pb/0.1/tests/: allkn2.ecl  fl2ecl.py  kde1.ecl  kde2.ecl  kmeans2.ecl  npr1.ecl  npr2.ecl  svd1.ecl  temp.ecl
ecl-pb/0.3/ecl-pb/: pb.ecl
ecl-pb/0.3/tests/: allkn1.ecl
ecl-pb/ecl-pb-glue/: workspace.h  workspace_dev.h
ecl-pb/pb/: definitions.ecl  karnagio.ecl
ecl-pb/tests/: allkn1.ecl  nmf1.ecl  nmf2.ecl  regression2.ecl  svd2.ecl  svd3.ecl
hpcc/src/: ML  build.py  pb2ecl_test1.ecl
hpcc/src/pb/: definitions.ecl  karnagio.ecl  undefinitions.ecl
hpcc/src/pb-dev/: Boost.gen.cmake  CMakeLists.txt
hpcc/src/pb-dev/allkn/: allkn0.cc  allkn1.cc  allkn2.cc  allkn3.cc  allkn4.cc  allkn5.cc  allkn6.cc  allkn7.cc
hpcc/src/pb-dev/cart/: cart.cc
hpcc/src/pb-dev/kde/: kde.cc
hpcc/src/pb-dev/kernel_pca/: kernel_pca.cc
hpcc/src/pb-dev/kmeans/: kmeans.cc
hpcc/src/pb-dev/lasso/: lasso.cc
hpcc/src/pb-dev/mvu/: mvu.cc
hpcc/src/pb-dev/nmf/: nmf.cc
hpcc/src/pb-dev/npr/: npr.cc
hpcc/src/pb-dev/ortho_range_search/: ortho_range_search.cc
hpcc/src/pb-dev/regression/: regression.cc
hpcc/src/pb-dev/svd/: svd.cc
hpcc/src/pb-dev/svm/: svm.cc
hpcc/src/tests/: allkn3.ecl  kde3.ecl  kde4.ecl  kmeans1.ecl  lasso1.ecl  regression1.ecl  svm1.ecl
hpcc/src/workspace/: macros.h  numeric_datum.h  workspace.h  workspace_dev.h
karnagio/0.6.3/: license.txt
karnagio/0.6.3/src/: CMakeLists.txt  CPack.cmake  GenCMake.cmake
karnagio/0.6.4/: Makefile
karnagio/0.6.4/include/ubigraph/: UbigraphAPI.h
karnagio/0.6.4/src/: CMakeLists.txt  CPack.cmake  GenCMake.cmake
karnagio/0.6.4/src/test/: kernel_pca.test.cc  point.test.cc  qr_least_squares.test.cc
karnagio/0.6.5/: windows_install_instructions
karnagio/0.6.5/src/: CPack.cmake  CPack.cmake.old  GenCMake.cmake
karnagio/0.6.5/src/plugin/: Boost.gen.cmake
karnagio/0.6.5/src/test/: BoostTest.gen.cmake  Self.gen.cmake  basic_cart.test.cc  bregman_nn.test.cc  bregman_tree_test.cc  kmeans.test.cc  lbfgs_opt.test.cc  math.test.cc  metric_tree.test.cc  multi_dataset.test.cc  ortho_range_search.test.cc  table.test.cc
karnagio/0.6.6/: .com.jungledisk.service.status  build_dependencies.py  deploy.py  release_notes
karnagio/0.6.6/src/: GenCMake.cmake
karnagio/0.6.6/src/plugin/: Boost.gen.cmake  BoostThread.gen.cmake  CMake.gen.cmake
karnagio/0.6.6/src/test/: cart.test.cc  kde.test.cc  midpoint_kdtree.test.cc  multi_dataset.test.cc  quicsvd.test.cc
karnagio/tests/: allkn.py  alltests.py  ams.py  centroids  ensvd.py  graphd.py  kde.py  kmeans.py  lasso.py  moe.py  mtsp.py  nmf.py  npr.py  sentiment.py  svd.py  svm.py  test_results  test_suite.py  tf3.py
karnagio/tests/datasets/3gaussians/: 3gaussians.csv  3gaussians.label  3gaussians_chunk0  3gaussians_chunk1  3gaussians_regression  (+4 more)
(+680 files in other folders)
